2006-08-31  Wolfgang Klinger <wolfgang@stufenlos.net>

	* Feature #3026: Text change for the 'Quality' label

2006-08-31  Dmitry Dulepov  <typo3@accio.lv>

	* Performance enhancement for BE: (1) caching images in typo3/gfx and typo3/sysext; (2) caching CSS files in typo3/sysext/t3skin/stylesheets

2006-08-30  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Add and update icons for the new skin

2006-08-29  Ingmar Schlecht  <ingmar@typo3.org>

	* Made it possible to give FE users the choice to "stay logged in". See new install tool option $TYPO3_CONF_VARS[FE][permalogin]. You'll need the latest newloginbox version from the typo3xdev Subversion repository.

2006-08-29  Dmitry Dulepov  <typo3@accio.lv>

	* Performance enhancement in t3lib/class.t3lib_tstemplate.php: use UPDATE/INSERT (if no records have been updated) instead of DELETE/INSERT for cache_pagesection.
	* Show domain name in the page tree if is_siteroot is set for page and "options.pageTree.showDomainNameWithTitle" is set in user TSConfig

2006-08-25  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4076: Skin creates invalid HTML markup
	* Fixed bug #1454: Cookie lifetime set in localconf.php will be ignored. Thanks to Dietrich Heise and Jeff Segars.
	* Fixed bug #3922: config.spamProtectEmailAddresses doesn't respect config.removeDefaultJS setting. Thanks to Benjamin Mack.
	* Added a new parameter to tslib_pibase->pi_classParam() which may contain classes that should not be prefixed.

2006-08-24  Michael Stucki  <michael@typo3.org>

	* !!! Changed default value of $TYPO3_CONF_VARS[SYS][devIPmask] to "127.0.0.1,::1" (removed "192.168.*")
	* Fixed bug #1236: 404 error while using the new content wizard
	* Fixed bug #3909: TYPO3_SSL does not detect valid SSL session
	* Fixed bug #3973: pageNotFound_handling=TRUE is interpreted as URL

2006-08-23  Michael Stucki  <michael@typo3.org>

	* Fixed bug #3960: Display correct version number in Install Tool (only when authenticated)