@@ -1,3 +1,7 @@
+2006-08-31  Ernesto Baschny <ernst@cron-it.de>
+
+	* Feature #4131: Respects label_alt setting in some more places (especially labels pointing to MM tables)
+
 2006-08-31  Wolfgang Klinger <wolfgang@stufenlos.net>
 
 	* Feature #3026: Text change for the 'Quality' label
